Update Jupyter file again (lag).

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -504,9 +504,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "t:   7%|▋         | 16/221 [00:00<00:01, 152.71it/s, now=None]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Building video test_videos_output/solidWhiteRight.mp4.\n",
+      "Moviepy - Writing video test_videos_output/solidWhiteRight.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                               \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready test_videos_output/solidWhiteRight.mp4\n",
+      "CPU times: user 1.73 s, sys: 248 ms, total: 1.98 s\n",
+      "Wall time: 2.68 s\n"
+     ]
+    }
+   ],
    "source": [
     "white_output = 'test_videos_output/solidWhiteRight.mp4'\n",
     "## To speed up the testing process you may want to try your pipeline on a shorter subclip of the video\n",
@@ -528,9 +562,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<video width=\"960\" height=\"540\" controls>\n",
+       "  <source src=\"test_videos_output/solidWhiteRight.mp4\">\n",
+       "</video>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "HTML(\"\"\"\n",
     "<video width=\"960\" height=\"540\" controls>\n",
@@ -559,9 +610,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "t:   2%|▏         | 15/681 [00:00<00:04, 148.62it/s, now=None]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Building video test_videos_output/solidYellowLeft.mp4.\n",
+      "Moviepy - Writing video test_videos_output/solidYellowLeft.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                               \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready test_videos_output/solidYellowLeft.mp4\n",
+      "CPU times: user 5.42 s, sys: 693 ms, total: 6.11 s\n",
+      "Wall time: 7.36 s\n"
+     ]
+    }
+   ],
    "source": [
     "yellow_output = 'test_videos_output/solidYellowLeft.mp4'\n",
     "## To speed up the testing process you may want to try your pipeline on a shorter subclip of the video\n",
@@ -576,9 +661,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<video width=\"960\" height=\"540\" controls>\n",
+       "  <source src=\"test_videos_output/solidYellowLeft.mp4\">\n",
+       "</video>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "HTML(\"\"\"\n",
     "<video width=\"960\" height=\"540\" controls>\n",
